[MB-32316] Backport: Conditionally parse to check for N1QL error

* If LCB_RESP_F_FINAL flag is set, we will first do a regex search
  to check if the row is to be treated as a N1QL error and throw
  a N1QLError if so.
* Added the following error types KVError (for bucket ops),
  N1QLError (for N1QL queries) and EventingError (for general errors).
* All the above errors are subclasses of Error in JavaScript

Change-Id: I3b9fd516623b6b841e1dfcf4cc74f0c3d628f8f6
Reviewed-on: http://review.couchbase.org/102057
Reviewed-by: CI Bot
Reviewed-by: Gautham B A <gautham.bangalore@gmail.com>
Tested-by: Gautham B A <gautham.bangalore@gmail.com>
Reviewed-on: http://review.couchbase.org/102670
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Jeelan Basha Poola <jeelan.poola@couchbase.com>
Tested-by: Jeelan Basha Poola <jeelan.poola@couchbase.com>