v8_consumer/include/js_exception.h
@@ -18,6 +18,35 @@
 #include <v8.h>
 #include <vector>
 
+#include "info.h"
+
+class CustomError {
+public:
+  CustomError(v8::Isolate *isolate, const v8::Local<v8::Context> &context);
+  ~CustomError();
+
+  Info NewN1QLError(const v8::Local<v8::Value> &message_val,
+                    v8::Local<v8::Object> &n1ql_error_out) {
+    return NewCustomError(message_val, n1ql_error_out, "N1QLError");
+  }
+  Info NewKVError(const v8::Local<v8::Value> &message_val,
+                  v8::Local<v8::Object> &kv_error_out) {
+    return NewCustomError(message_val, kv_error_out, "KVError");
+  }
+  Info NewEventingError(const v8::Local<v8::Value> &message_val,
+                        v8::Local<v8::Object> &eventing_error_out) {
+    return NewCustomError(message_val, eventing_error_out, "EventingError");
+  }
+
+private:
+  Info NewCustomError(const v8::Local<v8::Value> &message_val,
+                      v8::Local<v8::Object> &custom_error_out,
+                      const std::string &type_name = "CustomError");
+
+  v8::Isolate *isolate_;
+  v8::Persistent<v8::Context> context_;
+};
+
 class JsException {
 public:
   JsException() {}
@@ -28,10 +57,10 @@ public:
   JsException &operator=(JsException &&exc_obj);
 
   void Throw(CURLcode res);
-  void Throw(lcb_t instance, lcb_error_t error);
-  void Throw(lcb_t instance, lcb_error_t error,
-             std::vector<std::string> error_msgs);
-  void Throw(const std::string &message);
+  void ThrowKVError(const std::string &err_msg);
+  void ThrowKVError(lcb_t instance, lcb_error_t error);
+  void ThrowN1QLError(const std::string &err_msg);
+  void ThrowEventingError(const std::string &err_msg);
 
   ~JsException();
 
@@ -49,5 +78,10 @@ private:
   v8::Persistent<v8::String> name_;
   v8::Persistent<v8::String> desc_;
 };
+
+Info DeriveFromError(v8::Isolate *isolate,
+                     const v8::Local<v8::Context> &context,
+                     const std::string &type_name);
+void CustomErrorCtor(const v8::FunctionCallbackInfo<v8::Value> &args);
 
 #endif
