v8_consumer/include/v8worker.h
@@ -298,10 +298,8 @@ private:
 
   std::vector<int64_t> vbfilter_map_;
   std::mutex vbfilter_lock_;
-
   std::vector<int64_t> processed_bucketops_;
   std::mutex bucketops_lock_;
-
   std::list<Bucket *> bucket_handles_;
   N1QL *n1ql_handle_;
   v8::Isolate *isolate_;
@@ -311,6 +309,7 @@ private:
   std::string handler_uuid_;
   std::string user_prefix_;
   std::atomic<bool> thread_exit_cond_;
+  const std::vector<std::string> exception_type_names_;
 };
 
 const char *GetUsername(void *cookie, const char *host, const char *port,
