v8_consumer/src/v8worker.cc
@@ -132,7 +132,8 @@ V8Worker::V8Worker(v8::Platform *platform, handler_config_t *h_config,
                    const std::string &user_prefix)
     : app_name_(h_config->app_name), settings_(server_settings),
       platform_(platform), handler_name_(handler_name),
-      handler_uuid_(handler_uuid), user_prefix_(user_prefix) {
+      handler_uuid_(handler_uuid), user_prefix_(user_prefix),
+      exception_type_names_({"KVError", "N1QLError", "EventingError"}) {
   curl_timeout = h_config->curl_timeout;
   histogram_ = new Histogram(HIST_FROM, HIST_TILL, HIST_WIDTH);
   thread_exit_cond_.store(false);
@@ -178,6 +179,11 @@ V8Worker::V8Worker(v8::Platform *platform, handler_config_t *h_config,
   global->Set(v8::String::NewFromUtf8(isolate_, "createTimer"),
               v8::FunctionTemplate::New(isolate_, CreateTimer));
 
+  for (const auto &type_name : exception_type_names_) {
+    global->Set(v8::String::NewFromUtf8(isolate_, type_name.c_str()),
+                v8::FunctionTemplate::New(isolate_, CustomErrorCtor));
+  }
+
   if (try_catch.HasCaught()) {
     LOG(logError) << "Exception logged:"
                   << ExceptionString(isolate_, &try_catch) << std::endl;
@@ -187,6 +193,7 @@ V8Worker::V8Worker(v8::Platform *platform, handler_config_t *h_config,
   context_.Reset(isolate_, context);
   js_exception_ = new JsException(isolate_);
   data_.js_exception = js_exception_;
+  data_.custom_error = new CustomError(isolate_, context);
 
   auto ssl = false;
   auto port = server_settings->eventing_port;
@@ -276,6 +283,7 @@ V8Worker::~V8Worker() {
   }
 
   auto data = UnwrapData(isolate_);
+  delete data->custom_error;
   delete data->comm;
   delete data->transpiler;
   delete data->utils;
@@ -354,6 +362,10 @@ int V8Worker::V8WorkerLoad(std::string script_to_execute) {
   auto context = context_.Get(isolate_);
   auto transpiler = UnwrapData(isolate_)->transpiler;
   v8::Context::Scope context_scope(context);
+
+  for (const auto &type_name : exception_type_names_) {
+    DeriveFromError(isolate_, context, type_name);
+  }
 
   auto uniline_info = transpiler->UniLineN1QL(script_to_execute);
   LOG(logTrace) << "code after Unilining N1QL: "
